PR/47304: Kouki Ooyatsu: -s (source IPv6 address to be used) option does not work because the wrong variable is used. XXX: Pullup to 6.