usr.sbin/traceroute6/traceroute6.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: traceroute6.c,v 1.42 2012/01/04 16:09:44 drochner Exp $	*/
+/*	$NetBSD: traceroute6.c,v 1.43 2012/12/10 18:11:33 christos Exp $	*/
 /*	$KAME: traceroute6.c,v 1.67 2004/01/25 03:24:39 itojun Exp $	*/
 
 /*
@@ -75,7 +75,7 @@ static char sccsid[] = "@(#)traceroute.c	8.1 (Berkeley) 6/6/93";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
-__RCSID("$NetBSD: traceroute6.c,v 1.42 2012/01/04 16:09:44 drochner Exp $");
+__RCSID("$NetBSD: traceroute6.c,v 1.43 2012/12/10 18:11:33 christos Exp $");
 #endif
 #endif
 
@@ -724,10 +724,10 @@ main(int argc, char *argv[])
 		if (error0)
 			errx(1, "Cannot get address for `%s' (%s)", source,
 			    gai_strerror(error0));
-		if (res->ai_addrlen > sizeof(Src))
+		if (res0->ai_addrlen > sizeof(Src))
 			errx(1, "Bad incompatible address length");
-		memcpy(&Src, res->ai_addr, res->ai_addrlen);
-		freeaddrinfo(res);
+		memcpy(&Src, res0->ai_addr, res0->ai_addrlen);
+		freeaddrinfo(res0);
 	} else {
 		struct sockaddr_in6 Nxt;
 		int dummy;
